Added GitHub App sessions
